examples/readme_validation/syntax_cases/fail/fail_bad_metadata.dsl
@name "语法负例-错误元数据"
[打印], 内容: "bad metadata"
